--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="interests.html">Interests</a>
+        <a href="ideas.html">Ideas</a>
         <a href="activities.html">Activities</a>
         <a href="work.html">Work</a>
         <a href="contact.html">Contact</a>
