--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="about.html">About Me</a>
         <a href="ideas.html">Ideas</a>
         <a href="activities.html">Activities</a>
-        <a href="work.html">Work</a>
+        <a href="works.html">Work</a>
         <a href="contact.html">Contact</a>
     </nav>
 
