--- a/ideas.html
+++ b/ideas.html
@@ -17,7 +17,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="activities.html">Activities</a>
-        <a href="work.html">Work</a>
+        <a href="works.html">Work</a>
         <a href="contact.html">Contact</a>
     </nav>
 
