--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="interests.html">Interests</a>
+        <a href="ideas.html">Interests</a>
         <a href="activities.html">Activities</a>
-        <a href="work.html">Work</a>
+        <a href="works.html">Work</a>
         <a href="contact.html">Contact</a>
     </nav>
 
