--- a/lor/mr_rush.html
+++ b/lor/mr_rush.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cen Sun - Personal Webpage</title>
@@ -102,12 +101,12 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="ideas.html">Ideas</a>
-        <a href="activities.html">Activities</a>
-        <a href="works.html">Work</a>
-        <a href="contact.html">Contact</a>
+        <a href="https://webofcen.github.io/index.html">Home</a>
+        <a href="https://webofcen.github.io/about.html">About Me</a>
+        <a href="https://webofcen.github.io/ideas.html">Ideas</a>
+        <a href="https://webofcen.github.io/activities.html">Activities</a>
+        <a href="https://webofcen.github.io/works.html">Work</a>
+        <a href="https://webofcen.github.io/contact.html">Contact</a>
     </nav>
 
     <div class="main-content">
@@ -117,17 +116,23 @@
         <div class="request-form">
             <p><b>Letter of Recommendation Request Form for Class of 2024</b></p>
 
+            <p><b>Chinese Name: </b>Cen Sun <br>
+
+            <b>English Name: </b>Sam <br>
+
+            <b>Intended Major(s) </b>Economics/ Business/ Undecided</p>
+    
             <p1>1. What was your most memorable class-related experience with this teacher?</p1>
-            <p>Discussing "Poor Economics" with Mr. Rush was my most memorable experience. Before winter vacation, I approached Mr. Rush after reading "Poor Economics" and expressed my desire to discuss the book. He graciously agreed and spent an evening reading it to discuss with me the following day. His dedication and the substance of our conversation impressed me deeply. This discussion deepened my interest in economics and reinforced my commitment to studying the subject.</p>
+            <p>Discussing "Poor Economics" with Mr. Rush was my most memorable experience. Before winter vacation, I approached Mr. Rush after reading "Poor Economics" and expressed my desire to discuss the book. He graciously agreed and spent an evening reading it to discuss with me the following day. His dedication and the substance of our conversation impressed me deeply, with the complexity of human and why they are poor, so on as intrinsic motivation, strengthening my idea of choosing economics as major for making welfare. This discussion deepened my interest in economics and reinforced my commitment to studying the subject.</p>
 
             <p1>2. Give an example of an experience from this class where you worked as part of a team and your efforts contributed to a positive classroom environment.</p1>
             <p>Helping my friend Jason with Macroeconomics content created a positive classroom environment. Jason initially struggled and felt anxious, so he sought my help. I assisted him in reviewing the material, which also served as a review for myself. This dynamic of teaching and learning not only helped Jason but also improved the overall class atmosphere.</p>
 
             <p1>3. Describe an occasion during this class when you demonstrated your creativity or problem-solving skills.</p1>
-            <p>Initially, I relied solely on memorizing factors that would shift curves, which led to poor performance. After seeking advice from Mr. Rush, I changed my approach to learning by drawing conclusions using my own logic. This shift helped me improve significantly, demonstrating my problem-solving skills.</p>
+            <p>I initially relys on memorization which resulted in poor test performance. After seeking advice from Mr. Rush, I learned about the importance of logic and considering various factors, inspired by how AI functions. I changed my study habits, engaged in discussions, and applied economic concepts like supply and demand to real-world scenarios. Mr. Rush helped me understand the complexities of human behavior, leading to a deeper grasp of problem-solving(the discussion of "Too Bad It's Good") that involves applying course material and thinking broadly about events with multiple factors and consequences.</p>
 
             <p1>4. For this class, how well did you cope with academic demands? </p1>
-            <p>Initially, I found it difficult to complete assignments on time. However, I made significant progress and now complete all assignments efficiently. My curiosity and openness to new things helped me adapt to the class style and enjoy the learning process.</p>
+            <p>Initially, I faced challenges adapting to the class and completing assignments efficiently. However, I made considerable progress and can now complete assignments on time with good quality. I maintain an optimistic and open attitude, embracing new experiences. I felt more confortable and enjoyable with Mr. Rush's broad topics, I became open to them and found enjoyment in the course. I shifted my focus from memorization to understanding, which transformed my perception of economics. I value the opportunity to explore new things and adapt quickly, embracing new ideas and finding surprises.</p>
 
             <p1>5. Think of an assignment or a project that you undertook for this class that caused you to become curious about a new topic. </p1>
             <p>The concepts of opportunity cost and sunk cost sparked my interest in practical applications of economics. Reading "Poor Economics" and discussing it with Mr. Rush reinforced my decision to major in Economics, emphasizing the humanistic concerns and real-life applications of the subject.</p>
@@ -136,14 +141,19 @@
             <p>I participated in the Pioneer program for Economic Growth, took part in competitions like LIBF and IEO, and read non-textbooks such as "Money, Banking, and Financial Systems." These activities provided foundational knowledge for my major.</p>
 
             <p1>7. What are some qualities desired by your intended major at a university? How have you developed these qualities in this course?</p1>
-            <p>The desired qualities include interdisciplinary thinking, leadership, passion, and math proficiency. Through various extracurricular activities and classroom experiences, I have developed these qualities, making me a strong candidate for my intended major.</p>
+            <p>Interdisciplinary, leadership, passionate, and math proficiency. <br><br>  I am deeply involved in extracurricular activities that showcase my humanistic concern, interdisciplinary approach, leadership, and passion for learning. As a founding member of Honduras Glasses, I have helped raise funds for impoverished students in need of eyeglasses. I have also contributed 190 hours to the Beijing Volunteer Service Federation. My leadership skills are evident in managing Aspirational DreamWork and co-founding the BNDS Investment Club, where I share knowledge and collaborate with other business clubs. <br><br> 
+
+I am passionate about applying academic knowledge across disciplines. For example, I use computer science to enhance my finance studies and apply calculus to deepen my understanding of economic models. I also draw on strategies from AP Language to interpret historical events and economic concepts. <br><br> 
+
+Economics is central to my interdisciplinary approach, as it interrelates with other subjects and provides insights into real-life events. I use economic concepts to interpret language, psychology, computer science, and more, while also practicing logic to draw conclusions about economic phenomena. My passion for learning drives me to explore new academic areas, work hard, and find joy in the learning process.</p>
        
         </div>
-        <p2><strong>Thank you for reading through, Mr. Davis! If you need anything else, please tell me, and I will send it to you immediately. Again, thank you so much for being my recommendation letter teacher!</strong></p2>
+        <p2><strong>Thank you for reading through, Mr. Rush! If you need anything else, please tell me, and I will send it to you immediately. Again, thank you so much for being my recommendation letter teacher!</strong></p2>
     </div>
 
     <footer>
         © 2024 Cen Sun - All Rights Reserved
     </footer>
-</body>
-</html>
+
+
+</body></html>
