--- a/lor/mr_rush.html
+++ b/lor/mr_rush.html
@@ -148,7 +148,9 @@ I am passionate about applying academic knowledge across disciplines. For exampl
 Economics is central to my interdisciplinary approach, as it interrelates with other subjects and provides insights into real-life events. I use economic concepts to interpret language, psychology, computer science, and more, while also practicing logic to draw conclusions about economic phenomena. My passion for learning drives me to explore new academic areas, work hard, and find joy in the learning process.</p>
        
         </div>
-        <p2><strong>Thank you for reading through, Mr. Rush! If you need anything else, please tell me, and I will send it to you immediately. Again, thank you so much for being my recommendation letter teacher!</strong></p2>
+        <p2><strong>Thank you for reading through, Mr. Rush! If you need anything else, please tell me, and I will send it to you immediately. Again, thank you so much for being my recommendation letter teacher!</strong></p2> <br>
+        <p> <b>Download File: </b><a href="Sam_Mr. Rush_LoR.pdf" download="">Sam-Mr. Rush-LoR</a>
+    </p>    
     </div>
 
     <footer>
