--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cen Sun - Personal Webpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Interests</title>
+     <link rel="stylesheet" href="styles.css">
+    
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
             margin: 0;
             padding: 0;
+            background-color: #f5f5f5;
         }
 
         header {
@@ -22,43 +19,71 @@
             text-align: center;
         }
 
-        h1 {
+        nav ul {
+            list-style-type: none;
             margin: 0;
-        }
-
-        nav {
-            background-color: #333;
+            padding: 0;
             text-align: center;
-            padding: 10px 0;
+            background-color: #333;
         }
 
-        nav a {
+        nav ul li {
+            display: inline-block;
+            position: relative;
+        }
+
+        nav ul li a {
             color: #fff;
             text-decoration: none;
-            padding: 0 15px;
+            padding: 15px 20px;
+            display: block;
         }
 
-        nav a:hover {
-            text-decoration: underline;
+        nav ul li a:hover,
+        nav ul li:hover > a {
+            background-color: #575757;
         }
 
-        .main-content {
+        nav ul li .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333;
+            min-width: 160px;
+            z-index: 1;
+        }
+
+        nav ul li .dropdown-content a {
+            color: #fff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        nav ul li:hover .dropdown-content {
+            display: block;
+        }
+
+        main {
             padding: 20px;
-            margin: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .interests {
+        h2, h3 {
+            color: #333;
+        }
+
+        article {
+            margin-bottom: 20px;
             padding: 10px;
-            background-color: #f2f2f2;
+            background-color: white;
             border-radius: 5px;
-            margin-top: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        .contact-info {
-            margin-top: 20px;
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin-top: 10px;
         }
 
         footer {
@@ -66,37 +91,41 @@
             color: #fff;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
             bottom: 0;
             width: 100%;
-        }
+            position: fixed
         }
     </style>
-</head>
-
-<body>
+</head><body>
     <header>
         <h1>Welcome to Cen Sun's Personal Webpage</h1>
     </header>
-
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About Me</a>
-        <a href="ideas.html">Ideas</a>
-        <a href="activities.html">Activities</a>
-        <a href="works.html">Work</a>
-        <a href="contact.html">Contact</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="activity.html">My Activity</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li class="dropdown">
+                <a href="work.html" class="dropbtn">Work</a>
+                <div class="dropdown-content">
+                    <a href="papers.html">Papers</a>
+                    <a href="ideas.html">Ideas</a>
+                </div>
+            </li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
     </nav>
-
-    <div class="main-content">
+    <main>
+        <div class="main-content">
         <h2>Welcome!</h2>
         <p>Welcome to my personal webpage! Here you can find information about me, my interests, activities, work, and how to get in touch with me.</p>
         <p>Feel free to explore the sections above to learn more about me.</p>
     </div>
-
+    </main>
     <footer>
-        &copy; 2024 Cen Sun - All Rights Reserved
+        © 2024 Cen Sun - All Rights Reserved
     </footer>
-</body>
 
-</html>
+
+</body></html>
