--- a/works/ideas/index.html
+++ b/works/ideas/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests</title>
+    <title>Works | Ideas</title>
      <link rel="stylesheet" href="styles.css">
     
     <style>
@@ -104,18 +104,17 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="activity.html">My Activity</a></li>
-            <li><a href="interests.html">Interests</a></li>
-            <li class="dropdown">
-                <a href="work.html" class="dropbtn">Work</a>
-                <div class="dropdown-content">
-                    <a href="papers.html">Papers</a>
-                    <a href="ideas.html">Ideas</a>
-                </div>
-            </li>
-            <li><a href="contact.html">Contact Me</a></li>
+             <li><a href="https://webofcen.github.io">Home</a></li>
+                <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li class="dropdown">
+                    <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
+                    <div class="dropdown-content">
+                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                    </div>
+                </li>
+                <li><a href="https://webofcen.github.io/interests">Interests</a></li>
+                <li><a href="https://webofcen.github.io/contact">Contact Me</a></li>
         </ul>
     </nav>
     <main>
