--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests</title>
+    <title>About| CenSun</title>
      <link rel="stylesheet" href="styles.css">
     
     <style>
@@ -123,19 +123,22 @@
         <section id="about">
             <h1>About Me</h1>
             <p>Name: Cen Sun</p>
-            <p>Age: 25</p>
-            <p>Ethnicity: Asian</p>
+            <p>Age: 16</p>
+            <p>Ethnicity: Asian, Chinese</p>
             <p>Location: Beijing, China</p>
             <p>Interests: Music, Meditation, Writing</p>
-            <p>School: XYZ University</p>
-            <p>Ideal: To make a positive impact in the world through technology</p>
-            <p>Future Job Thinking: Software Developer</p>
-            <p>My Unique Features: Detail-oriented, Creative, Problem Solver</p>
+            <p>Academic Interest: Business, Finance, Economics</p>
+            <p>High School: Beijing National Day School</p>
+            <p>Ideal: To make a positive impact in the world through doing Economics/Finance, changing the world as profit-orienting</p>
+            <p>Future Job Thinking: Financial Analyst, Actuary, Something relates to medicine or AI</p>
+            <p>My Unique Features: Detail-oriented, Leadrship, Problem Solver, critical thinking, real understanding, reliable</p>
             <h2>Bio</h2>
-            <p>I am a passionate individual who loves exploring new ideas and sharing my thoughts with others...</p>
+            <p>I am a passionate individual who loves exploring new ideas and sharing my thoughts with others. This is a platform that I try to use my knowledge from school to create a useful wwebsite. I love business world, but annoy with the current profit-orienting world and would like to change it! On this website, I will be sharing some of my ideas as the form of essay about the economic world and any other fields. I am trying ot make a connection to different ideas from different culture and spread my own country's traditional culture! <br>
+              Also, I will post some of my daily events that I think is valuable for sharing! Hope you will like it! Seeya!
+              </p>
             <h2>Education</h2>
-            <p>High School: ABC High School</p>
-            <p>College: XYZ University, Bachelor of Science in Computer Science</p>
+            <p>High School: Beijing National Day School</p>
+            <p>Ideal College Country: United States, Austrilia, United Kindom</p>
             <h2>Resume</h2>
             <a href="resume.pdf" download="">Download My Resume</a>
         </section>
