--- a/activity/index.html
+++ b/activity/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests</title>
+    <title>Activity| Cen Sun</title>
      <link rel="stylesheet" href="styles.css">        
 </head>
   
@@ -14,6 +14,7 @@
             <ul>
                 <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
@@ -30,21 +31,21 @@
         <section id="activity">
             <h1>My Activity</h1>
             <article>
-                <h2><a href="1.html">Blog Post Title 1</a></h2>
-                <p>Date: 2024-06-05</p>
-                <p>This week, I delved into learning more about web development, focusing on creating interactive and responsive designs. I also attended a local tech meetup where I networked with other enthusiasts and professionals in the field.</p>
-                <img src="photo1.jpg" alt="Tech meetup">
+                <h2><a href="end-class-econ.html">Blog Post: End-class Celebration</a></h2>
+                <p>Date: 2024-06-14</p>
+                <p>This week, we do a celebration for our up-going Economics Teachr Mr. Rush. By doing double-blind strategy, we made a big surprise to both sides, for giving thanks to the teacher :)</p>
+                <img src="endlassecon.jpg" alt="End-class Celebration">
             </article>
             <article>
-                <h2>Blog Post Title 2</h2>
-                <p>Date: 2024-05-29</p>
-                <p>I started a new personal project that involves creating a mobile app for task management. It’s been a challenging but rewarding experience so far, and I’m excited to see where it goes.</p>
-                <img src="photo2.jpg" alt="Mobile app project">
+                <h2>Blog Post: UPenn Summer School</h2>
+                <p>Date: 2024-07-06</p>
+                <p>I went to the summer school at Penn Carey Law school for experienceing new fields and meeting new friends</p>
+                <img src="pennlaw.jpg" alt="PennLaw Summer School">
             </article>
             <article>
                 <h2>Blog Post Title 3</h2>
-                <p>Date: 2024-05-22</p>
-                <p>This month, I took a trip to the mountains for some relaxation and inspiration. The experience was rejuvenating and gave me fresh perspectives on my work and personal projects.</p>
+                <p>Date: N/A</p>
+                <p>N/A</p>
                 <img src="photo3.jpg" alt="Mountain trip">
             </article>
         </section>
