--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About| CenSun</title>
+    <title>About| Cen Sun</title>
      <link rel="stylesheet" href="styles.css">
     
     <style>
@@ -107,6 +107,7 @@
         <ul>
              <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
