--- a/interest/index.html
+++ b/interest/index.html
@@ -1,100 +1,8 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests</title>
+    <title>Interests | Cen Sun</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #0047ab;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #333;
-        }
-
-        nav ul li {
-            display: inline-block;
-            position: relative;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 15px 20px;
-            display: block;
-        }
-
-        nav ul li a:hover,
-        nav ul li:hover > a {
-            background-color: #575757;
-        }
-
-        nav ul li .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #333;
-            min-width: 160px;
-            z-index: 1;
-        }
-
-        nav ul li .dropdown-content a {
-            color: #fff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        nav ul li:hover .dropdown-content {
-            display: block;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2, h3 {
-            color: #333;
-        }
-
-        article {
-            margin-bottom: 20px;
-            padding: 10px;
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-top: 10px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -102,42 +10,42 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="activity.html">My Activity</a></li>
-            <li><a href="interests.html">Interests</a></li>
-            <li class="dropdown">
-                <a href="works.html" class="dropbtn">Works</a>
-                <div class="dropdown-content">
-                    <a href="works/papers">Papers</a>
-                    <a href="works/ideas">Ideas</a>
-                </div>
-            </li>
-            <li><a href="contact.html">Contact Me</a></li>
+             <li><a href="https://webofcen.github.io">Home</a></li>
+                <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
+                <li class="dropdown">
+                    <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
+                    <div class="dropdown-content">
+                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                    </div>
+                </li>
+                <li><a href="https://webofcen.github.io/interests">Interests</a></li>
+                <li><a href="https://webofcen.github.io/contact">Contact Me</a></li>
         </ul>
     </nav>
     <main>
         <section id="interests">
             <h1>Interests</h1>
             <h2>Playing Instruments</h2>
-            <p>I enjoy playing various musical instruments, including the guitar and piano. Music is a great way for me to relax and express my creativity.</p>
+            <p>I enjoy playing various musical instruments, including the Dongxiao(Chinese Traditional Music) and Clarinet. Music is a great way for me to relax and express my creativity.</p>
             <img src="playing_instruments.jpg" alt="Playing instruments">
             <h2>Meditation</h2>
-            <p>Meditation is an essential part of my daily routine. It helps me stay focused, calm, and grounded, especially during busy times.</p>
+            <p>Meditation is an essential part of my daily routine, and I learned it from Buddhism. It helps me stay focused, calm, and grounded, especially during busy times.</p>
             <img src="meditation.jpg" alt="Meditation">
             <h2>Writing</h2>
             <p>Writing is one of my passions. I enjoy writing blogs, short stories, and technical articles. It allows me to share my thoughts and ideas with a broader audience.</p>
             <img src="writing.jpg" alt="Writing">
             <h2>Book Reviews</h2>
             <article>
-                <h3><a href="book/#1">Book Title 1</a></h3>
-                <p>Review: This book provides an insightful perspective on the importance of mindfulness in our daily lives...</p>
-                <p>My Thoughts: I found this book to be incredibly enlightening and it has inspired me to incorporate more mindfulness practices into my routine.</p>
+                <h3><a href="book/on-the-road">On the Road-Jack Kerouac</a></h3>
+                <p>Review: "On the Road" is Jack Kerouac's iconic Beat Generation novel about freedom, adventure, and the American spirit.</p>
+                <p>My Thoughts: "On the Road" is unique for its stream-of-consciousness prose, vivid portrayal of the Beat Generation, and its exploration of freedom and self-discovery. It captures the restless, rebellious spirit of post-WWII America, influencing literature and culture profoundly.</p>
             </article>
             <article>
-                <h3>Book Title 2</h3>
-                <p>Review: A comprehensive guide to understanding the fundamentals of artificial intelligence...</p>
-                <p>My Thoughts: This book is a must-read for anyone interested in AI. It breaks down complex concepts into easily understandable sections.</p>
+                <h3><a href="book/poor-economics">Poor Economics-Banerjee</a></h3>
+                <p>Review: "Poor Economics" by Abhijit Banerjee and Esther Duflo explores the lives of the world's poor, challenging common misconceptions and offering insights into poverty alleviation through rigorous economic research.</p>
+                <p>My Thoughts: "Poor Economics" is unique for its groundbreaking approach, blending field experiments with economic theory to understand poverty. It provides practical, evidence-based solutions, humanizing the poor and transforming global development policy.</p>
             </article>
         </section>
     </main>
