--- a/works/ideas/index.html
+++ b/works/ideas/index.html
@@ -3,100 +3,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works | Ideas</title>
      <link rel="stylesheet" href="styles.css">
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #0047ab;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #333;
-        }
-
-        nav ul li {
-            display: inline-block;
-            position: relative;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 15px 20px;
-            display: block;
-        }
-
-        nav ul li a:hover,
-        nav ul li:hover > a {
-            background-color: #575757;
-        }
-
-        nav ul li .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #333;
-            min-width: 160px;
-            z-index: 1;
-        }
-
-        nav ul li .dropdown-content a {
-            color: #fff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        nav ul li:hover .dropdown-content {
-            display: block;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2, h3 {
-            color: #333;
-        }
-
-        article {
-            margin-bottom: 20px;
-            padding: 10px;
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-top: 10px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            bottom: 0;
-            width: 100%;
-            position: relative;
-
-        }
-    </style>
 
 </head><body>
     <header>
@@ -106,6 +12,7 @@
         <ul>
              <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
@@ -121,14 +28,16 @@
         <section id="ideas">
             <h1>Ideas</h1>
             <article>
-                <h2>Idea 1: Smart Home Automation</h2>
-                <p>Concept: Develop a comprehensive smart home system that integrates with various IoT devices to enhance home automation and security...</p>
-                <a href="idea1.pdf" download="">Download Project Plan</a>
+                <h2>Zongzi</h2>
+                <p>Date: 2024-06-10</p>
+                <p>Concept: At the time of Dragon Boat Festival, we think about Zongzi. Zongzi, a staple of Chinese cuisine, exemplifies cultural economics, driving festival-related commerce, and inspiring agri-business innovation for small-scale entrepreneurship.</p>
+                <a href="zongzi-econ.pdf" download="">Download Project Plan</a>
             </article>
             <article>
-                <h2>Idea 2: AI-Based Personal Finance Advisor</h2>
+                <h2>AI-Based Personal Finance Advisor</h2>
+                <p>Date: 2024-06-05</p>
                 <p>Concept: Create an AI-powered personal finance advisor that helps users manage their finances, track spending, and make investment decisions...</p>
-                <a href="idea2.pdf" download="">Download Project Plan</a>
+                <a href="AI-Finance.pdf" download="">Download Project Plan</a>
             </article>
         </section>
     </main>
