--- a/works/index.html
+++ b/works/index.html
@@ -43,11 +43,12 @@
         <ul>
              <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
-                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
-                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                        <a href="https://webofcen.github.io/works/papers">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas">Ideas</a>
                     </div>
                 </li>
                 <li><a href="https://webofcen.github.io/interests">Interests</a></li>
@@ -58,16 +59,16 @@
         <section id="work">
             <h1>Work</h1>
             <div class="work-buttons">
-                <a href="papers.html">Papers</a>
-                <a href="ideas.html">Ideas</a>
+                <a href="papers">Papers</a>
+                <a href="ideas">Ideas</a>
             </div>
             <div class="section-intro">
                 <h2>Papers</h2>
-                <p>In this section, you can find my academic papers and research work. My papers cover various topics in technology, including artificial intelligence, machine learning, and data science. I aim to contribute valuable insights and advancements to the field through my research.</p>
+                <p>In this section, you can find my academic papers and research work. My papers cover various topics in technology, Economics, Finance, Business, Culture, and Philosophy I aim to contribute valuable insights and advancements to the field through my research.</p>
             </div>
             <div class="section-intro">
                 <h2>Ideas</h2>
-                <p>This section is dedicated to my innovative ideas and future projects. Here, I share my thoughts on potential advancements in technology and propose new solutions to existing problems. My goal is to inspire others and foster collaboration on groundbreaking projects.</p>
+                <p>This section is dedicated to my innovative ideas. Here, I share my thoughts on potential advancements in those fields and propose new solutions to existing problems. My goal is to inspire others and foster collaboration on groundbreaking projects.</p>
             </div>
         </section>
     </main>
