--- a/works/papers/index.html
+++ b/works/papers/index.html
@@ -4,100 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Works| Papers</title>
      <link rel="stylesheet" href="styles.css">
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #0047ab;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #333;
-        }
-
-        nav ul li {
-            display: inline-block;
-            position: relative;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 15px 20px;
-            display: block;
-        }
-
-        nav ul li a:hover,
-        nav ul li:hover > a {
-            background-color: #575757;
-        }
-
-        nav ul li .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #333;
-            min-width: 160px;
-            z-index: 1;
-        }
-
-        nav ul li .dropdown-content a {
-            color: #fff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
-        nav ul li:hover .dropdown-content {
-            display: block;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h2, h3 {
-            color: #333;
-        }
-
-        article {
-            margin-bottom: 20px;
-            padding: 10px;
-            background-color: white;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-top: 10px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            bottom: 0;
-            width: 100%;
-            position: relative;
-
-        }
-    </style>
 
 </head><body>
     <header>
@@ -107,11 +13,12 @@
         <ul>
              <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
-                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
-                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                        <a href="https://webofcen.github.io/works/papers">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas">Ideas</a>
                     </div>
                 </li>
                 <li><a href="https://webofcen.github.io/interests">Interests</a></li>
@@ -122,13 +29,13 @@
         <section id="papers">
             <h1>Papers</h1>
             <article>
-                <h2>Research Paper Title 1</h2>
-                <p>Abstract: This paper explores the impacts of artificial intelligence on software development methodologies...</p>
+                <h2>N/A</h2>
+                <p>Abstract: TBA</p>
                 <a href="paper1.pdf" download="">Download Paper 1</a>
             </article>
             <article>
-                <h2>Research Paper Title 2</h2>
-                <p>Abstract: This study investigates the role of machine learning in predicting financial market trends...</p>
+                <h2>N/A</h2>
+                <p>Abstract: TBA</p>
                 <a href="paper2.pdf" download="">Download Paper 2</a>
             </article>
         </section>
