--- a/activity/index.html
+++ b/activity/index.html
@@ -12,19 +12,19 @@
     </header>
         <nav>
             <ul>
-                <li><a href="https://webofcen.github.io">Home</a></li>
+             <li><a href="https://webofcen.github.io">Home</a></li>
                 <li><a href="https://webofcen.github.io/about">About Me</a></li>
                 <li><a href="https://webofcen.github.io/activity">Activity</a></li>
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
-                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
-                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                        <a href="https://webofcen.github.io/works/papers">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas">Ideas</a>
                     </div>
                 </li>
                 <li><a href="https://webofcen.github.io/interests">Interests</a></li>
                 <li><a href="https://webofcen.github.io/contact">Contact Me</a></li>
-            </ul>
+        </ul>
         </nav>
   
     <main>
