--- a/interest/index.html
+++ b/interest/index.html
@@ -16,8 +16,8 @@
                 <li class="dropdown">
                     <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
                     <div class="dropdown-content">
-                        <a href="https://webofcen.github.io/works/papers.html">Papers</a>
-                        <a href="https://webofcen.github.io/works/ideas.html">Ideas</a>
+                        <a href="https://webofcen.github.io/works/papers">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas">Ideas</a>
                     </div>
                 </li>
                 <li><a href="https://webofcen.github.io/interests">Interests</a></li>
