--- a/works/index.html
+++ b/works/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Works| CenSun</title>
+    <title>Works| Cen Sun</title>
     <link rel="stylesheet" href="styles.css">
     <style>
          
