--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interests</title>
+    <title>Home | Cen Sun's personal website</title>
      <link rel="stylesheet" href="styles.css">
 </head><body>
     <header>
