--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <h1>Contact Me</h1>
             <p>If you have any questions or would like to make friends woth me, feel free to reach out:</p>
             <p><strong>Phone:</strong> +86 158-0161-9480</p>
-            <p><strong>Email:</strong> <a href="mailto:suncen07@outlook.com">suncen07@outlook.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:suncen07@gmail.com">suncen07@gmail.com</a></p>
             <h2>Social Media</h2>
             <ul>
                 <li><a href="https://studio.youtube.com/channel/UCUSJ7PvrTxFqvzhzRUg8Utg" target="_blank">YouTube</a></li>
