--- a/works/index.html
+++ b/works/index.html
@@ -104,7 +104,7 @@
         }
 
         .work-buttons a {
-            background-color: #4CAF50;
+            background-color: #333;
             color: white;
             padding: 20px 40px;
             text-align: center;
@@ -115,7 +115,7 @@
         }
 
         .work-buttons a:hover {
-            background-color: #45a049;
+            background-color: #333;
         }
 
         .section-intro {
