--- a/lor/learned-from-mrrush.html
+++ b/lor/learned-from-mrrush.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,25 +19,55 @@
             text-align: center;
         }
 
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #333;
+        }
+
+        nav ul li {
+            display: inline-block;
+            position: relative;
+        }
+
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 15px 20px;
+            display: block;
+        }
+
+        nav ul li a:hover,
+        nav ul li:hover > a {
+            background-color: #575757;
+        }
+
+        nav ul li .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #333;
+            min-width: 160px;
+            z-index: 1;
+        }
+
+        nav ul li .dropdown-content a {
+            color: #fff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        nav ul li:hover .dropdown-content {
+            display: block;
+        }
+
         h1 {
             margin: 0;
         }
 
-        nav {
-            background-color: #333;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 0 15px;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
+        
 
         .main-content {
             padding: 20px;
@@ -85,12 +114,7 @@
             width: 100%;
         }
 
-        .request-form {
-            margin-top: 20px;
-        }
-
-        .request-form p {
-            margin-bottom: 15px;
+       
         }
     </style>
 </head>
@@ -99,14 +123,21 @@
     <header>
         <h1>Welcome to Cen Sun's Personal Webpage</h1>
     </header>
-
-    <nav>
-        <a href="https://webofcen.github.io/index.html">Home</a>
-        <a href="https://webofcen.github.io/about.html">About Me</a>
-        <a href="https://webofcen.github.io/ideas.html">Ideas</a>
-        <a href="https://webofcen.github.io/activities.html">Activities</a>
-        <a href="https://webofcen.github.io/works.html">Work</a>
-        <a href="https://webofcen.github.io/contact.html">Contact</a>
+<nav>
+        <ul>
+             <li><a href="https://webofcen.github.io">Home</a></li>
+                <li><a href="https://webofcen.github.io/about">About Me</a></li>
+                <li><a href="https://webofcen.github.io/activity">Activity</a></li>
+                <li class="dropdown">
+                    <a href="https://webofcen.github.io/works" class="dropbtn">Works</a>
+                    <div class="dropdown-content">
+                        <a href="https://webofcen.github.io/works/papers">Papers</a>
+                        <a href="https://webofcen.github.io/works/ideas">Ideas</a>
+                    </div>
+                </li>
+                <li><a href="https://webofcen.github.io/interests">Interests</a></li>
+                <li><a href="https://webofcen.github.io/contact">Contact Me</a></li>
+        </ul>
     </nav>
 
     <div class="main-content">
@@ -196,6 +227,7 @@ see you <br></i>
     <footer>
         © 2024 Cen Sun - All Rights Reserved
     </footer>
+
 
 
 
