--- a/activity/index.html
+++ b/activity/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,6 +95,15 @@
             position: relative;
 
         }
+         @media(max-width: 648px) {
+              nav ul li {
+                display: block; /* 列表项垂直排列 */
+            }
+            nav ul li .dropdown-content {
+                position: static; /* 子菜单不再绝对定位 */
+            }
+
+         }
     </style>
 </head>
   
@@ -143,5 +151,9 @@
             </article>
         </section>
     </main>
+<footer>
+        © 2024 Cen Sun - All Rights Reserved
+    </footer>
+
 
 </body></html>
